# lexikan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lexikanConfig.hpp.in
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  lexikan.cpp  lexikan.hpp
src/: Base.cpp  Base.hpp  CMakeLists.txt  Configuration.hpp  Dictionary.hpp  HasName.cpp  HasName.hpp  IHasUUID.cpp  IHasUUID.hpp  ISerializable.hpp  IVariant.hpp  README.md
src/exceptions/: NotImplemented.hpp  VariantException.hpp
src/gui/: README.md
src/hwifc/: CMakeLists.txt  README.md  UsbDevice.cpp  UsbDevice.hpp  UsbInterface.cpp  UsbInterface.hpp
src/plugin/: CMakeLists.txt  README.md
src/python/: CMakeLists.txt  README.md  basic.cpp
src/python/pybind11/: CMakeLists.txt  testmodPybind.cpp
